--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "d3-scale": "^1.0.6",
     "d3-selection": "^1.1.0",
     "d3-shape": "^1.2.0",
+    "echarts": "^4.9.0",
     "ngx-bootstrap": "^6.1.0",
+    "ngx-echarts": "^5.1.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
